added balance to userModel, in response(current) and to swagger
