# controllers/users/current.js
@@ -10,6 +10,7 @@ const current = async (req, res) => {
     ResponseBody: {
       name: user.name,
       email: user.email,
+      balance: user.balance,
     },
   })
 }
